--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,40 @@
 buildscript {
     repositories {
+        maven { url = "http://maven.dries007.net/content/repositories/ccm/" }
         mavenCentral()
     }
+    
     dependencies {
 		classpath 'com.github.abrarsyed.gmcp:GMCP:latest.integration'
     }
 }
+configurations {
+    compile
+    deployJars
+}
+repositories {
+    maven { url = "http://maven.dries007.net/content/repositories/ccm/" }
+}
+dependencies {
+    compile "ccm.nucleumOmnium:NucleumOmnium:latest.integration"
+}
 
 apply plugin: "gmcp"
+apply plugin: "maven"
 
-version = "v1.0.0"
+group = "ccm.placeableTools"
+
+version = "v1.0.0." + System.getenv().BUILD_NUMBER
+
+targetCompatibility = 1.6
+sourceCompatibility = 1.6
 
 archivesBaseName = 'PlaceableTools'
 minecraft {
 	minecraftVersion = "1.6.4"
 }
 
-sourceSets {
-    main {
-        java {
-            srcDir 'NO/src/main/java'
-        }
-    }
-}
-
-processResources
-{
+processResources {
     from(sourceSets.main.resources.srcDirs) {
         include '**/*.info'
         expand 'version':project.version, 'mcversion':project.minecraft.minecraftVersion
@@ -35,12 +44,60 @@ processResources
         exclude '**/*.info'
     }
 }
-// because the normal default jar task has been modified to be obfuscated
-task deobfJar(type: Jar) {
-	from sourceSets.main.output
-	appendix = 'dev'
-}
 
 artifacts {
-	archives deobfJar
+	archives jar
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: mavenUrl) {
+                authentication(userName: mavenUser, password: mavenPassword)
+            }
+            pom {
+                groupId = project.group
+                version = project.version
+                artifactId = project.archivesBaseName
+                project {
+                    name project.archivesBaseName
+                    packaging 'jar'
+                    description 'Adds the ability to place tools in the world!'
+                    url 'https://github.com/CCM-Modding/PlaceableTools'
+
+                    scm {
+                        url 'https://github.com/CCM-Modding/PlaceableTools'
+                        connection 'scm:git:git://github.com/CCM-Modding/PlaceableTools.git'
+                        developerConnection 'scm:git:git@github.com:CCM-Modding/PlaceableTools.git'
+                    }
+
+                    issueManagement {
+                        system 'github'
+                        url 'https://github.com/CCM-Modding/PlaceableTools/issues'
+                    }
+
+                    licenses  {
+                        license  {
+                            name 'MIT License'
+                            url 'https://raw.github.com/CCM-Modding/PlaceableTools/master/LICENCE'
+                            distribution 'repo'
+                        }
+                    }
+
+                    developers {
+                        developer {
+                            id 'Dries007'
+                            name 'Dries007'
+                            roles { role 'developer' }
+                        }
+                        developer {
+                            id 'Claycorp'
+                            name 'Claycorp'
+                            roles { role 'architect' }
+                        }
+                    }
+                }
+           }
+       }
+    }
 }
