--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,12 @@ buildscript {
 		classpath 'com.github.abrarsyed.gmcp:GMCP:latest.integration'
     }
 }
+
 configurations {
     compile
     deployJars
 }
+
 repositories {
     maven { url = "http://maven.dries007.net/content/repositories/ccm/" }
     maven { url = "http://files.minecraftforge.net/maven/" }
@@ -39,13 +41,13 @@ if (ext.BUILD_NUMBER == null) ext.BUILD_NUMBER = "0"
 version = project.minecraft.minecraftVersion + "-" + version + "." + ext.BUILD_NUMBER
 
 dependencies {
-    compile("ccm.nucleumOmnium:NucleumOmnium:" + project.minecraft.minecraftVersion + "-2.+:dev")
+    compile("ccm.nucleumOmnium:NucleumOmnium:" + project.minecraft.minecraftVersion + "-+:dev")
 }
 
 processResources {
     from(sourceSets.main.resources.srcDirs) {
         include '**/*.info'
-        expand 'version':project.version, 'mcversion':project.minecraft.minecraftVersion
+        expand 'version':project.version, 'mcversion':project.minecraft.minecraftVersion, 'nucleumOmniumVersion':configurations.compile.resolvedConfiguration.firstLevelModuleDependencies.findAll({ it.moduleName == "NucleumOmnium"}).collect({ it.moduleVersion})[0].split("-")[1]
     }
 
     from(sourceSets.main.resources.srcDirs) {
@@ -55,12 +57,21 @@ processResources {
 
 task sourcesJar(type: Jar) {
     from sourceSets.main.allSource
-    classifier = 'dev-src'
+    classifier = 'src'
+    appendix = project.minecraft.minecraftVersion
 }
 
 task deobfJar(type: Jar) {
     from sourceSets.main.output
-	classifier = 'dev'
+    from (sourceSets.main.allSource.srcDirs) {
+        include '**/*.java'
+    }
+    classifier = 'dev'
+    appendix = project.minecraft.minecraftVersion
+}
+
+jar {
+    appendix = project.minecraft.minecraftVersion
 }
 
 artifacts {
