--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ minecraft {
 
 ext.BUILD_NUMBER = System.getenv().BUILD_NUMBER;
 if (ext.BUILD_NUMBER == null) ext.BUILD_NUMBER = "0"
-version = project.minecraft.minecraftVersion + "-" + version + "." + ext.BUILD_NUMBER
+version = version + "." + ext.BUILD_NUMBER
 
 dependencies {
     compile("ccm.nucleumOmnium:NucleumOmnium:" + project.minecraft.minecraftVersion + "-+:dev")
