update for jenkisn

--- a/build.gradle
+++ b/build.gradle
@@ -81,10 +81,10 @@ artifacts {
 }
 
 uploadArchives {
- if (project.hasProperty("mavenUrl")) {
+    if (project.hasProperty("mavenUser") && project.hasProperty("mavenPassword")) {
 		repositories {
 			mavenDeployer {
-				repository(url: mavenUrl) {
+				repository(url: "http://maven.dries007.net/content/repositories/ccm/") {
 					authentication(userName: mavenUser, password: mavenPassword)
 				}
 				pom {
@@ -129,8 +129,8 @@ uploadArchives {
 							}
 						}
 					}
-			   }
-		   }
+                }
+            }
 		}
 	}
 }
